Lagere den Text aus den htmls in extra Property files aus und füge eine automatische Sprachenerkennung hinzu [VA-113]

--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="en">
+<html xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" th:href="@{/pictures/SAOFLogo.svg}" href="SAOFLogo.svg" sizes="any">
-    <title>Home - ART</title>
+    <title th:text="#{my_artworks.title}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,27 +17,12 @@
     <link href="mainpage.css" rel="stylesheet">-->
 </head>
 <body>
-<!-- NAVBAR -->
-+
 <div th:insert="~{nav :: copy}"></div>
-<!-- Main Content -->
-<!--
-<div class="row" th:each="artwork: ${artworks}" th:attr="onclick=|openArtwork('${artwork.generatedArtworkName}')|">
-    <p th:text="${artwork.artworkName}">artworkname</p>
-    <p th:text="${artwork.price}">price</p>
-    <div class="img" style="border:1px solid black;">
-        <img th:src="${artwork.primaryImageUrl}" alt="this is art img">
-    </div>
-
-</div>
-
-<hr>
-<hr>
--->
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addArtworkModal">
-    Add new Artwork
+<button type="button" class="btn btn-primary"
+        data-bs-toggle="modal" data-bs-target="#addArtworkModal"
+        th:text="#{my_artworks.add_artwork}">
 </button>
 
 <!-- Add Artwork Modal -->
@@ -49,14 +33,14 @@
                   method="post">
                 <div class="modal-header">
                     <input id="addArtworkModalLabel" type="text" th:field="*{artworkName}" class="fadeIn second"
-                           name="artworkName" placeholder="Artwork name" required/>
+                           name="artworkName" th:placeholder="#{modal.placeholder.name}" required/>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <input type="text" th:field="*{artworkPrice}" class="fadeIn second" name="artworkPrice"
-                           placeholder="Price" required/>
+                           th:placeholder="#{modal.placeholder.price}" required/>
                     <input type="text" th:field="*{artworkDescription}" class="fadeIn second" name="artworkDescription"
-                           placeholder="Description"/>
+                           th:placeholder="#{modal.placeholder.description}"/>
 
                     <input type="file" id="firstImageInput" th:field="*{images[0].multipartFile}"
                            onchange="reload_image('firstImage', this)" class="fadeIn second"
@@ -84,8 +68,8 @@
                          th:width="${@environment.getProperty('image.medium.width')}">
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Add</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" th:text="#{modal.close}"></button>
+                    <button type="submit" class="btn btn-primary" th:text="#{my_artworks.modal_add.add}"></button>
                 </div>
             </form>
         </div>
@@ -109,14 +93,13 @@
             <div class="img" style="border:1px solid black;">
                 <img th:src="${artwork.primaryImageUrl}" alt="this is art img">
             </div>
-            <h4><span th:text="${artwork.price}"></span> €</h4>
+            <h4><span th:text="${artwork.price}"></span><span th:text="#{currency}"></span></h4>
         </div>
     </div>
 </div>
-<!-- footer-->
-+
+
 <div th:insert="~{footer :: copy}"></div>
-+<!-- footer-->
+
 <script th:src="@{/javascript/open_artwork_func.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
