--- a/src/main/resources/templates/artist/registrationArtist.html
+++ b/src/main/resources/templates/artist/registrationArtist.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml"  th:href="@{/pictures/SAOFLogo.svg}" href="SAOFLogo.svg" sizes="any">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Register</title>
+    <title th:text="#{registration_artist.title}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -21,9 +21,9 @@
         </div>
         <!---->
         <form action="#" th:action="@{/registration/artist}" th:object="${artist}" method="post">
-            <input type="" th:field="*{country}" id="country" class="fadeIn second" name="country" placeholder="Country" required/>
-            <input type="text" th:field="*{domicile}" id="domicile" class="fadeIn second" name="domicile" placeholder="Domicile" required/>
-            <input type="submit" class="fadeIn fourth" value="Register" onclick="">
+            <input type="" th:field="*{country}" id="country" class="fadeIn second" name="country" th:placeholder="#{registration_artist.placeholder.country}" required/>
+            <input type="text" th:field="*{domicile}" id="domicile" class="fadeIn second" name="domicile" th:placeholder="#{registration_artist.placeholder.domicile}" required/>
+            <input type="submit" class="fadeIn fourth" th:value="#{registration_artist.button.value}" onclick="">
         </form>
     </div>
 </div>
