--- a/src/main/resources/templates/error/400erErrors.html
+++ b/src/main/resources/templates/error/400erErrors.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Something went wrong :(</title>
+    <title th:text="#{error_pages.title}"></title>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -17,21 +17,18 @@
     <div class="row">
         <div class="col-md-12">
             <div class="error-template">
-                <h1>
-                    Oops!
-                </h1>
-                <h3>Error Code: <span th:text="${error.statusCode}"></span></h3>
-                <h4>It seems like this error is caused by you! Choose the 3rd button for some trouble shooting!</h4>
+                <h1 th:text="#{error_pages.header.first}"></h1>
+                <h3><span th:text="#{error_pages.status_code}"></span> <span th:text="${error.statusCode}"></span></h3>
+                <h4 th:text="#{400er.header.description}"></h4>
                 <div class="error-details">
                     <p th:text="${error.message}"></p>
                 </div>
                 <div class="error-actions">
-                    <a href="../artworks/artworks.html" th:href="@{/artworks}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
-                        Take Me Home </a>
-                    <a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope"></span>
-                        Contact Support </a>
-                    <button onclick="myFunction()" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-question-sign"></span>
-                        Show some more :( </button>
+                    <a href="../artworks/artworks.html" th:href="@{/artworks}" class="btn btn-primary btn-lg" th:text="#{error_pages.home}">
+                        <span class="glyphicon glyphicon-home"></span>
+                    </a>
+                    <a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-envelope" th:text="#{error_pages.support}"></span></a>
+                    <button onclick="myFunction()" class="btn btn-default btn-lg" th:text="#{400er.show_more}"><span class="glyphicon glyphicon-question-sign"></span></button>
                 </div>
                 <div class="show-more" id="show_more" style="display: none">
                     <p th:text="${error.timestamp}"></p>
@@ -39,17 +36,11 @@
                     <hr>
                     <div style="text-align: left">
                         <ul>
-                            <li>The first thing to do is to refresh the page. Press F5 to refresh the URL.
-                                <br>
-                                <i>An error may have occurred if the page wasn't loaded correctly.</i>
-                            </li>
-                            <li>Clear the browser cache and delete cookies. If you are able to connect to the site via another device such as your mobile phone, clearing the cache and clearing cookies should easily solve the problem.
-                            </li>
-                            <li>Check the URL and make sure it is spelled correctly.<br>
-                                <i>Check spelling, hyphens, page extension, etc.</i>
-                            </li>
-                            <li>Remove malware: some malware can cause a 404 error to occur. It is imperative to make sure that your computer is protected and that it does not contain viruses.
-                            </li>
+                            <li th:text="#{400er.more.first}"></li>
+                            <li th:text="#{400er.more.second}"></li>
+                            <li th:text="#{400er.more.third}"></li>
+                            <li th:text="#{400er.more.forth}"></li>
+                            <li th:text="#{400er.more.fifth}"></li>
                         </ul>
                     </div>
                 </div>
@@ -58,7 +49,7 @@
     </div>
 </div>
 <script>function myFunction() {
-    var x = document.getElementById("show_more");
+    const x = document.getElementById("show_more");
     if (x.style.display === "none") {
         x.style.display = "block";
     } else {
