--- a/src/main/resources/templates/user/registrationUser.html
+++ b/src/main/resources/templates/user/registrationUser.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml"  th:href="@{/pictures/SAOFLogo.svg}" href="SAOFLogo.svg" sizes="any">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Register</title>
+    <title th:text="#{registration_user.title}"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -22,14 +22,14 @@
         </div>
         <!---->
         <form action="#" th:action="@{/registration/user}" th:object="${user}" method="post">
-            <input type="text" th:field="*{firstName}" id="firstname" class="fadeIn second" name="firstname" placeholder="First Name" required/>
-            <input type="text" th:field="*{secondName}" id="secondname" class="fadeIn second" name="secondname" placeholder="Second Name" required/>
-            <input type="email" th:field="*{email}" id="email" class="fadeIn second" name="email" placeholder="your@email.com" required/>
-            <input type="password" th:field="*{password}" id="password" class="fadeIn second" name="password" placeholder="Password" minlength="8" required/>
-            <input type="password" th:field="*{repeatPassword}" id="repeatPassword" class="fadeIn second" name="repeatPassword" placeholder="Repeat the Password" required/>
+            <input type="text" th:field="*{firstName}" id="firstname" class="fadeIn second" name="firstname" th:placeholder="#{registration_user.placeholder.first_name}" required/>
+            <input type="text" th:field="*{secondName}" id="secondname" class="fadeIn second" name="secondname" th:placeholder="#{registration_user.placeholder.second_name}" required/>
+            <input type="email" th:field="*{email}" id="email" class="fadeIn second" name="email" th:placeholder="#{registration_user.placeholder.email}" required/>
+            <input type="password" th:field="*{password}" id="password" class="fadeIn second" name="password" th:placeholder="#{registration_user.placeholder.password}" minlength="8" required/>
+            <input type="password" th:field="*{repeatPassword}" id="repeatPassword" class="fadeIn second" name="repeatPassword" th:placeholder="#{registration_user.placeholder.repeat_password}" required/>
             <input type="hidden" th:if="${jsessionid!=null}" th:value="${jsessionid}" name="jsessionid"/>
             <input type="hidden" th:if="${returnUrl!=null}" th:value="${returnUrl}" name="returnUrl"/>
-            <input type="submit" class="fadeIn fourth" value="Register" onclick="">
+            <input type="submit" class="fadeIn fourth" th:value="#{registration_user.register}" onclick="">
         </form>
     </div>
 </div>
