Füge die Funktionalität hinzu um die Sprache zu ändern [VA-113]

--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -43,5 +43,6 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
 <script th:src="@{/javascript/document_ready.js}"></script>
+<script th:src="@{/javascript/change_lang.js}"></script>
 </body>
 </html>
