--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -51,17 +51,16 @@
       </ul>
       <div class="social-part">
         <img src="https://img.icons8.com/fluent/48/000000/germany-circular.png" class="social"/>
-        <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
+          <label class="switch">
+            <input type="checkbox" id="lang" onchange="change_lang()" th:checked="#{lang}==en">
+            <span class="slider round"></span>
+          </label>
         <img src="https://img.icons8.com/color/48/000000/usa-circular.png" class="social"/>
       </div>
     </div>
   </nav>
   <!-- NAVBAR -->
 </div>
-
 </body>
 
 </html>
