Rechne die Preise in die passende Währung um  [VA-113]

--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -106,5 +106,6 @@
         crossorigin="anonymous"></script>
 <script th:src="@{/javascript/document_ready.js}"></script>
 <script th:src="@{/javascript/reload_image.js}"></script>
+<script th:src="@{/javascript/change_lang.js}"></script>
 </body>
 </html>
