--- a/src/main/resources/templates/user/contactus.html
+++ b/src/main/resources/templates/user/contactus.html
@@ -31,5 +31,6 @@
 <!-- footer-->
 <div th:insert="~{footer :: copy}"></div>
 <!-- footer-->
+<script th:src="@{/javascript/change_lang.js}"></script>
 </body>
 </html>
