--- a/src/main/resources/templates/user/contact.html
+++ b/src/main/resources/templates/user/contact.html
@@ -53,5 +53,6 @@
 <!-- footer-->
 <div th:insert="~{footer :: copy}"></div>
 <!-- footer-->
+<script th:src="@{/javascript/change_lang.js}"></script>
 </body>
 </html>
