--- a/src/main/resources/templates/artworks/artworks.html
+++ b/src/main/resources/templates/artworks/artworks.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-
+<div class="alert alert-primary" role="alert" th:text="${success}" th:if="${success}"></div>
 <div th:insert="~{nav :: copy}"></div>
 
 <div class="container-fluid">
