Passe das Errorhandling an und füge error alerts hinzu [VA-111]

--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -17,7 +17,8 @@
     <link href="mainpage.css" rel="stylesheet">-->
 </head>
 <body>
-<div class="alert alert-primary" role="alert" th:text="${success}" th:if="${success}"></div>
+<div class="alert alert-success" role="alert" th:text="${success}" th:if="${success}"></div>
+<div class="alert alert-danger" role="alert" th:text="${failure}" th:if="${failure}"></div>
 <div th:insert="~{nav :: copy}"></div>
 
 <!-- Button trigger modal -->
