--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -6,60 +6,66 @@
 <body>
 
 <div th:fragment="copy">
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-sm   navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-sm   navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/artworks}"><img th:src="@{/pictures/SAOFLogo.svg}" alt="Logo" width="40" title="Go to Home"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/contact}" th:text="#{navbar.contact}"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/contact_us}" th:text="#{navbar.contact_us}"></a>
-        </li>
-        <li class="nav-item">
-          <a th:href="@{/shopping_cart}" class="nav-link" th:text="#{navbar.shopping_cart}"></a>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/artworks}"><img th:src="@{/pictures/SAOFLogo.svg}" alt="Logo"
+                                                                    width="40" title="Go to Home"></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/contact}" th:text="#{navbar.contact}"></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/contact_us}" th:text="#{navbar.contact_us}"></a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopping_cart}" class="nav-link" th:text="#{navbar.shopping_cart}"></a>
 
-        <li sec:authorize="isAnonymous()" class="nav-item">
-          <a th:href="@{/login}" class="nav-link" th:text="#{navbar.login}"></a>
-        </li>
+                <li sec:authorize="isAnonymous()" class="nav-item">
+                    <a th:href="@{/login}" class="nav-link" th:text="#{navbar.login}"></a>
+                </li>
 
-        <li sec:authorize="isAnonymous()" class="nav-item">
-          <a th:href="@{/registration/user}" class="nav-link" th:text="#{navbar.registration.user}"></a>
-        </li>
+                <li sec:authorize="isAnonymous()" class="nav-item">
+                    <a th:href="@{/registration/user}" class="nav-link" th:text="#{navbar.registration.user}"></a>
+                </li>
 
-        <li sec:authorize="isAuthenticated()" class="nav-item">
-          <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link" th:text="#{navbar.registration.artist}"></a>
-          <a sec:authorize="hasRole('ROLE_ARTIST')" th:href="@{/my_artworks}" class="nav-link" th:text="#{navbar.my_artworks}"></a>
-          <a><form action="/logout" method="post">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-            <button type="submit" th:text="#{navbar.logout}"></button>
-          </form></a>
-        </li>
+                <li sec:authorize="isAuthenticated()" class="nav-item">
+                    <a sec:authorize="!hasRole('ROLE_ARTIST')" th:href="@{/registration/artist}" class="nav-link"
+                       th:text="#{navbar.registration.artist}"></a>
+                    <a sec:authorize="hasRole('ROLE_ARTIST')" th:href="@{/my_artworks}" class="nav-link"
+                       th:text="#{navbar.my_artworks}"></a>
+                    <a>
+                        <form action="/logout" method="post">
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                            <button type="submit" th:text="#{navbar.logout}"></button>
+                        </form>
+                    </a>
+                </li>
 
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/account}" th:text="#{navbar.account}"></a>
-        </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/account}" th:text="#{navbar.account}"></a>
+                </li>
 
-      </ul>
-      <div class="social-part">
-        <img src="https://img.icons8.com/fluent/48/000000/germany-circular.png" class="social"/>
-          <label class="switch">
-            <input type="checkbox" id="lang" onchange="change_lang()" th:checked="#{lang}==en">
-            <span class="slider round"></span>
-          </label>
-        <img src="https://img.icons8.com/color/48/000000/usa-circular.png" class="social"/>
-      </div>
-    </div>
-  </nav>
-  <!-- NAVBAR -->
+            </ul>
+            <div class="social-part">
+                <img src="https://img.icons8.com/fluent/48/000000/germany-circular.png" class="social"/>
+                <label class="switch">
+                    <input type="checkbox" id="lang" onchange="change_lang()" th:checked="#{lang}==en">
+                    <span class="slider round"></span>
+                </label>
+                <img src="https://img.icons8.com/color/48/000000/usa-circular.png" class="social"/>
+            </div>
+        </div>
+    </nav>
+    <!-- NAVBAR -->
 </div>
 </body>
 
