--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -11,15 +11,15 @@
                 <div class="col-md-1">
                     <img th:src="@{/pictures/SAOFLogo.svg}" id="icon" alt="Art Icon" width="40" height="40"/>
                 </div>
-                <div class="col-md-3" id="footerlogotext">
+                <div class="col-md-3" id="footerlogotext" style="padding-top: 0.5em">
                     <p>
                         SAOF Logo 2021 &trade;
                     </p>
                 </div>
-                <div class="col-md-4" id="footer_content_contact">
+                <div class="col-md-4" id="footer_content_contact" style="padding-top: 0.5em">
                     <a href="http://localhost:8080/contact_us" th:text="#{footer.contact_us}"></a>
                 </div>
-                <div class="col-md-4" id="footer_content_legal">
+                <div class="col-md-4" id="footer_content_legal" style="padding-top: 0.5em">
                     <a href="http://localhost:8080" th:text="#{footer.legal}"></a>
                 </div>
             </div>
