--- a/src/main/resources/static/css/signin.css
+++ b/src/main/resources/static/css/signin.css
@@ -27,7 +27,23 @@ h2 {
     color: #cccccc;
 }
 
-
+.underlineHover {
+    background-color: grey;
+    border: none;
+    color: white;
+    padding: 15px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 5px 10px 5px 10px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
 
 /* STRUCTURE */
 
@@ -64,11 +80,11 @@ h2 {
 }
 
 #displayStrength {
-    height: 3rem;
-    -webkit-border-radius: 0 0 10px 10px;
-    border-radius: 0 0 10px 10px;
-    -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-    box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+    height: 1rem;
+    background-color: white;
+    text-align: center;
+    color: black;
+    font-size: 12px;
 }
 
 /* TABS */
@@ -96,11 +112,9 @@ input[type=button], input[type=submit], input[type=reset]  {
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(219,60,60,0.4);
-    box-shadow: 0 10px 30px 0 rgba(219,60,60,0.4);
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
-    margin: 5px 20px 40px 20px;
+    margin: 20px 20px 20px 20px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
@@ -232,6 +246,7 @@ input::placeholder {
 
 /* Simple CSS3 Fade-in Animation */
 .underlineHover:after {
+    text-transform: none;
     display: block;
     left: 0;
     bottom: -10px;
@@ -243,7 +258,7 @@ input::placeholder {
 }
 
 .underlineHover:hover {
-    color: #0d0d0d;
+    color: white;
 }
 
 .underlineHover:hover:after{
@@ -260,4 +275,5 @@ input::placeholder {
 
 #icon {
     width:2rem;
+    padding-top: 0.5rem;
 }
