--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -45,7 +45,7 @@
                     <a>
                         <form action="/logout" method="post">
                             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                            <button type="submit" th:text="#{navbar.logout}"></button>
+                            <button class="logoutbutton" type="submit" th:text="#{navbar.logout}"></button>
                         </form>
                     </a>
                 </li>
