--- a/src/main/resources/static/css/mainpage.css
+++ b/src/main/resources/static/css/mainpage.css
@@ -21,6 +21,13 @@ ul li a{
     transition: transform .2s;
 }
 
+body {
+    position: relative;
+    min-height: 100%;
+    min-height: 100vh;
+    padding-bottom: 3.5rem;
+}
+
 /*.img:hover {
     transform: scale(1.05);
 }*/
@@ -37,6 +44,13 @@ ul li a{
 }
 
 .logoutbutton {
+    border: none;
+    color: white;
+    background-color: #CCCCCC;
+    border-radius: 3px;
+}
+
+.ewdelbutton {
     border: none;
     color: white;
     background-color: #CCCCCC;
